--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "framer-motion": "^10.3.0",
     "next": "latest",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
