--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/stripe-js": "^1.49.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "framer-motion": "^10.3.0",
     "next": "latest",
@@ -15,8 +17,10 @@
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^11.14.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
