--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "framer-motion": "^10.3.0",
-    "next": "latest",
+    "next": "^13.1.6",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
